test/edition/basics/attributeCheck-default.good
attributeCheck-default.chpl:6: error: unknown first edition 'default'
